--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "marked": "^13.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.1",
+    "netlify": "^13.2.0",
     "preact": "^10.22.1",
     "sharp": "^0.33.0",
     "solid-js": "^1.8.18",
