--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,14 +1,19 @@
 backend:
   name: git-gateway
-  branch: main # Cambia esto si tu rama principal tiene otro nombre
-media_folder: "static/uploads"
+  branch: main  # Ajusta a la rama que estás usando
+
+media_folder: "public/uploads"
 public_folder: "/uploads"
+
 collections:
   - name: "publicaciones"
     label: "Publicaciones"
-    folder: "src/content/publicaciones"
+    folder: "content/publicaciones"
     create: true
     slug: "{{slug}}"
     fields:
       - { label: "Título", name: "titulo", widget: "string" }
+      - { label: "Fecha", name: "fecha", widget: "datetime" }
+      - { label: "Resumen", name: "resumen", widget: "text" }
       - { label: "Enlace", name: "link", widget: "string" }
+      - { label: "Contenido", name: "contenido", widget: "markdown" }
