--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "decap-cms-app": "^3.4.0",
     "express": "^4.19.2",
+    "googleapis": "^144.0.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "marked": "^13.0.1",
