--- a/package.json
+++ b/package.json
@@ -13,38 +13,38 @@
   "dependencies": {
     "@astrojs/mdx": "^1.1.5",
     "@astrojs/netlify": "^6.0.1",
-    "@astrojs/node": "^8.3.3",
-    "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/tailwind": "^5.0.2",
-    "@fontsource-variable/inter": "^5.0.15",
-    "@tailwindcss/typography": "^0.5.10",
+    "@astrojs/node": "^8.3.4",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.4",
+    "@fontsource-variable/inter": "^5.1.1",
+    "@tailwindcss/typography": "^0.5.16",
     "astro": "^4.16.18",
-    "astro-icon": "^0.8.1",
-    "astro-navbar": "^2.3.0",
-    "astro-seo": "^0.8.0",
+    "astro-icon": "^0.8.2",
+    "astro-navbar": "^2.3.9",
+    "astro-seo": "^0.8.4",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "decap-cms-app": "^3.4.0",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "googleapis": "^144.0.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "marked": "^13.0.3",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.10.1",
-    "netlify": "^13.2.0",
+    "multer": "1.4.5-lts.1",
+    "mysql2": "^3.12.0",
+    "netlify": "^13.2.1",
     "netlify-cms-app": "^2.15.72",
-    "preact": "^10.22.1",
-    "sharp": "^0.33.0",
-    "solid-js": "^1.8.18",
-    "tailwindcss": "^3.3.5"
+    "preact": "^10.25.4",
+    "sharp": "^0.33.5",
+    "solid-js": "^1.9.4",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jsonwebtoken": "^9.0.7"
   }
 }
