--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "data-update": "node src/utils/data-update.js",
-    "build": "npm run data-update && astro build",
+    "build": "pnpm run data-update && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
