--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.1.5",
-    "@astrojs/netlify": "^6.0.1",
+    "@astrojs/mdx": "^4.3.3",
     "@astrojs/node": "^8.3.4",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
     "@fontsource-variable/inter": "^5.1.1",
     "@tailwindcss/typography": "^0.5.16",
-    "astro": "^4.16.18",
     "astro-icon": "^0.8.2",
     "astro-navbar": "^2.3.9",
     "astro-seo": "^0.8.4",
@@ -37,15 +35,19 @@
     "netlify": "^13.2.1",
     "netlify-cms-app": "^2.15.72",
     "preact": "^10.25.4",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "sharp": "^0.33.5",
     "solid-js": "^1.9.4",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "@astrojs/netlify": "^6.5.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.7"
+    "@types/jsonwebtoken": "^9.0.7",
+    "astro": "^5.12.8"
   }
 }
